# bi_tri_bot

./: Cargo.toml  README.md
src/: get_arbs.rs  main.rs
