[package]
name = "bi_tri_bot"
version = "0.1.0"
authors = ["Nicolas Arnold <nicolas.arnold@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }
reqwest = "0.9.18"